fix: usability on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -34,6 +34,6 @@ button.danger {
   }
 
   button {
-    transform: scale(2);
+    transform: scale(1.4);
   }
 }
