--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/constants.scss';
+
 .main {
   height: 100vh;
   width: 100%;
@@ -29,4 +31,24 @@
   display: flex;
   gap: 8px;
   font-size: 24px !important;
+}
+
+@media (max-width: $screen-l) {
+  .loginButtons {
+    gap: 16px;
+    flex-direction: column;
+  }
+
+  .advanced {
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 16px;
+
+      button {
+        margin: initial;
+      }
+    }
+  }
 }
