--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -13,13 +13,10 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 16px;
   align-items: center;
 
   button {
     width: 200px;
-  }
-
-  button + button {
-    margin-top: 16px;
   }
 }
